WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140429
[GTK] Fix build after
r178385
https://bugs.webkit.org/show_bug.cgi?id=140429
Summary
[GTK] Fix build after r178385
Hunseop Jeong
Reported
2015-01-13 22:31:16 PST
../../Source/WebKit2/UIProcess/API/gtk/WebKitLoaderClient.cpp:44:10: error: ‘void LoaderClient::didStartProvisionalLoadForFrame(WebKit::WebPageProxy&, WebKit::WebFrameProxy&, uint64_t, API::Object*)’ marked override, but does not override void didStartProvisionalLoadForFrame(WebPageProxy&, WebFrameProxy& frame, uint64_t /* navigationID */, API::Object* /* userData */) override ^ ../../Source/WebKit2/UIProcess/API/gtk/WebKitLoaderClient.cpp:51:10: error: ‘void LoaderClient::didReceiveServerRedirectForProvisionalLoadForFrame(WebKit::WebPageProxy&, WebKit::WebFrameProxy&, uint64_t, API::Object*)’ marked override, but does not override void didReceiveServerRedirectForProvisionalLoadForFrame(WebPageProxy&, WebFrameProxy& frame, uint64_t /* navigationID */, API::Object* /* userData */) override ^ ../../Source/WebKit2/UIProcess/API/gtk/WebKitLoaderClient.cpp:58:10: error: ‘void LoaderClient::didFailProvisionalLoadWithErrorForFrame(WebKit::WebPageProxy&, WebKit::WebFrameProxy&, uint64_t, const WebCore::ResourceError&, API::Object*)’ marked override, but does not override void didFailProvisionalLoadWithErrorForFrame(WebPageProxy&, WebFrameProxy& frame, uint64_t /* navigationID */, const ResourceError& resourceError, API::Object* /* userData */) override ^ ../../Source/WebKit2/UIProcess/API/gtk/WebKitLoaderClient.cpp:71:10: error: ‘void LoaderClient::didCommitLoadForFrame(WebKit::WebPageProxy&, WebKit::WebFrameProxy&, uint64_t, API::Object*)’ marked override, but does not override void didCommitLoadForFrame(WebPageProxy&, WebFrameProxy& frame, uint64_t /* navigationID */, API::Object* /* userData */) override ^ ../../Source/WebKit2/UIProcess/API/gtk/WebKitLoaderClient.cpp:78:10: error: ‘void LoaderClient::didFinishLoadForFrame(WebKit::WebPageProxy&, WebKit::WebFrameProxy&, uint64_t, API::Object*)’ marked override, but does not override void didFinishLoadForFrame(WebPageProxy&, WebFrameProxy& frame, uint64_t /* navigationID */, API::Object* /* userData */) override ^ ../../Source/WebKit2/UIProcess/API/gtk/WebKitLoaderClient.cpp:85:10: error: ‘void LoaderClient::didFailLoadWithErrorForFrame(WebKit::WebPageProxy&, WebKit::WebFrameProxy&, uint64_t, const WebCore::ResourceError&, API::Object*)’ marked override, but does not override void didFailLoadWithErrorForFrame(WebPageProxy&, WebFrameProxy& frame, uint64_t /* navigationID */, const ResourceError& resourceError, API::Object* /* userData */) override ^
Attachments
Patch
(5.52 KB, patch)
2015-01-13 22:33 PST
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Patch
(1.33 KB, patch)
2015-01-13 23:43 PST
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
Patch
(1.33 KB, patch)
2015-01-14 00:19 PST
,
Hunseop Jeong
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Hunseop Jeong
Comment 1
2015-01-13 22:33:56 PST
Created
attachment 244582
[details]
Patch
WebKit Commit Bot
Comment 2
2015-01-13 22:35:15 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Hunseop Jeong
Comment 3
2015-01-13 22:40:23 PST
It is a wrong patch,, I have to look more,,
Chris Dumez
Comment 4
2015-01-13 22:50:36 PST
I have just landed a speculative fix for this one.
Chris Dumez
Comment 5
2015-01-13 22:59:44 PST
I haven't fixed this one though: Source/WebKit2/CMakeFiles/WebKit2.dir/UIProcess/API/gtk/WebKitUserContentManager.cpp.o -c ../../Source/WebKit2/UIProcess/API/gtk/WebKitUserContentManager.cpp ../../Source/WebKit2/UIProcess/API/gtk/WebKitUserContentManager.cpp: In constructor ‘_WebKitUserContentManagerPrivate::_WebKitUserContentManagerPrivate()’: ../../Source/WebKit2/UIProcess/API/gtk/WebKitUserContentManager.cpp:37:33: error: ‘create’ is not a member of ‘WebKit::WebUserContentControllerProxy’ : userContentController(WebUserContentControllerProxy::create()) ^ This was broken by
https://bugs.webkit.org/show_bug.cgi?id=140414
. I'll let you take a look at it as I don't have a GTK build.
Chris Dumez
Comment 6
2015-01-13 23:02:15 PST
For reference, here are my speculative GTK build fixes:
https://trac.webkit.org/r178395
https://trac.webkit.org/r178408
https://trac.webkit.org/r178409
Hunseop Jeong
Comment 7
2015-01-13 23:43:52 PST
Created
attachment 244585
[details]
Patch
Csaba Osztrogonác
Comment 8
2015-01-14 00:03:10 PST
Comment on
attachment 244585
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=244585&action=review
> Source/WebKit2/ChangeLog:3 > + [GTK] Fix build after
r178375
do you mean
r178385
?
Csaba Osztrogonác
Comment 9
2015-01-14 00:06:10 PST
Comment on
attachment 244585
[details]
Patch rs=me with fixing the changelog
Hunseop Jeong
Comment 10
2015-01-14 00:09:31 PST
(In reply to
comment #8
)
> Comment on
attachment 244585
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=244585&action=review
> > > Source/WebKit2/ChangeLog:3 > > + [GTK] Fix build after
r178375
> > do you mean
r178385
?
Oops,, Yes , I mean
r178385
. Thanks,
Hunseop Jeong
Comment 11
2015-01-14 00:19:51 PST
Created
attachment 244587
[details]
Patch
Csaba Osztrogonác
Comment 12
2015-01-14 00:48:06 PST
Somebody else fixed by
http://trac.webkit.org/changeset/178412
Csaba Osztrogonác
Comment 13
2015-01-14 00:51:25 PST
Could you coordinate in the future to avoid parallel working? The simplest way is to add the new bug url to the original bug.
Gwang Yoon Hwang
Comment 14
2015-01-14 00:56:29 PST
Sorry for duplicated work. I didn't know that build fix was in progress.
Carlos Garcia Campos
Comment 15
2015-01-14 00:59:23 PST
Thank you all for the build fixes.
Gwang Yoon Hwang
Comment 16
2015-01-14 01:29:35 PST
(In reply to
comment #11
)
> Created
attachment 244587
[details]
> Patch
Could you re-apply this patch to the trunk? I mis-readed the code. APIObject is refcounted, so it is correct to use adoptRef for WebUserContentManager.
Carlos Garcia Campos
Comment 17
2015-01-14 01:48:51 PST
(In reply to
comment #16
)
> (In reply to
comment #11
) > > Created
attachment 244587
[details]
> > Patch > > Could you re-apply this patch to the trunk? > I mis-readed the code. APIObject is refcounted, so it is correct to use > adoptRef for WebUserContentManager.
Shouldn't we add the create method again instead? I think it was removed only because mac no uses a different way to allocate the object but we still need it
Carlos Garcia Campos
Comment 18
2015-01-14 02:15:51 PST
Reopening to land the right fix
WebKit Commit Bot
Comment 19
2015-01-14 02:18:39 PST
Comment on
attachment 244587
[details]
Patch Rejecting
attachment 244587
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-02', 'apply-attachment', '--no-update', '--non-interactive', 244587, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: orce']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 2 diffs from patch file(s). patching file Source/WebKit2/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebKit2/UIProcess/API/gtk/WebKitUserContentManager.cpp Hunk #1 FAILED at 34. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebKit2/UIProcess/API/gtk/WebKitUserContentManager.cpp.rej Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.appspot.com/results/4847328368263168
Carlos Garcia Campos
Comment 20
2015-01-14 02:22:06 PST
Committed
r178417
: <
http://trac.webkit.org/changeset/178417
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug