[GTK] Fix build after r178385 https://bugs.webkit.org/show_bug.cgi?id=140429

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-01-14
Reviewed by Csaba Osztrogonác.

* UIProcess/API/gtk/WebKitUserContentManager.cpp:
(_WebKitUserContentManagerPrivate::_WebKitUserContentManagerPrivate):

Canonical link: https://commits.webkit.org/158422@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178417 268f45cc-cd09-0410-ab3c-d52691b4dbfc